--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -341,58 +341,18 @@ Finally, the \emph{constrainig value} contains a literal value to be checked aga
 
 This simple structure plus the constraining elements form the building blocks of our proposed framework. In the technical report \cite{BoschNolleAcarEckert2015}, we list for every constraint type its representation in our framework which not only shows that constraints of any constraint type can indeed be described generically in this way, but which also forms the starting point for any mappings using this framework.
 
-\textbf{\emph{DL Expressivity}:}
-The \emph{RDF-CV} allows to describe 
-constraints which are either \emph{expressible in DL} (64\%) or which are \emph{not expressible in DL} (36\%). Constraints which are expressible in DL are instantiated from 64\% of the overall 81 constraint types. On the other hand, constraints which are not expressible in DL are assigned to 36\% of all constraint types.
-%In case a constraint type is \emph{expressible in DL}, we determined which DL constructs are needed to express the constraint type.
+paragraph{Formal approach and semantics.}
 
+A cornerstone of the framework is the generic representation of a constraint, which can often be done using \emph{Description Logics (DL)}, as for the \emph{minimum qualified cardinality restrictions}: {\small\ms{Publication $\sqsubseteq$ $\geq$1 author.Person}}
 
+It turned out that 64\% of the 81 constraint types are actually expressible in DL. Only for the remaining 36\%, other means, i.e., other constraining elements, had to be identified. This is not surprising if we consider that OWL is based on Description Logics. When we talk about using Description Logics to represent constraints, we have to establish once more that the semantics of OWL and Description Logics differ from the semantics of constraint languages regarding the open world assumption (OWA) and the non-unique naming assumption (nUNA). Both are usually assumed when dealing with OWL or DL, whereas validation usually assumes a closed world (CWA) and unique naming (UNA), i.e., if a desired property is missing, this leads to a violation and if two resources are named differently, they are assumed to be different resources. 
 
-Altogether, instances of the most of the constraint types are \emph{simple constraints on properties} which are \emph{expressible in DL}. 
+We won't get into details about these assumptions here, but it has to be noted that the applied semantics have to be defined if validation is performed, as the results would differ under different semantics. Precisely, we found that for 56.8\% of the constraint types validation results differ if the CWA or the OWA is assumed 
+and for 66.6\% of the constraint types validation results are different in case the UNA or the nUNA is assumed \cite{BoschNolleAcarEckert2015}.
 
-
-Prerequisites to develop a vocabulary to describe RDF constraints of any RDF constraint type are (1) to specify the underlying semantics for RDF validation and thus for the vocabulary and (2) to define a basic terminology and classification system for RDF constraints which lay the ground for discussions on RDF validation.
-
-
-RDF validation and OWL 2 assume different semantics. 
-This ambiguity in semantics is one of the main reasons why OWL 2 has not been adopted as a standard constraint language for RDF validation in the past.
-We compare semantics of RDF validation and OWL 2 as OWL 2 is considered as a constraint language 
-in case the semantics for RDF validation is applied.
-
-OWL 2 is based on the {\em open-world assumption} \emph{(OWA)}, i.e., a statement cannot be inferred to be false if it cannot be proved to be true  which fits its primary design purpose to represent knowledge on the World Wide Web. 
-As each book must have a title {\small\ms{(Book $\sqsubseteq \exists$ title.$\top$)}} and {\em Hamlet} is a book, %{\small\ms{(Book(Hamlet)),}}
-{\em Hamlet} must have a title as well.
-In an OWA setting, this constraint does not cause a violation, even if there is no explicitly defined title, since there must be a title for this book which we may not know. 
-%($\mathcal{K}$ is consistent).
-As RDF validation has its origin in the XML world,
-many RDF validation scenarios require the {\em closed-world assumption} \emph{(CWA)}, i.e., a statement is inferred to be false if it cannot be proved to be true.
-Thus, classical constraint languages are based on the CWA where constraints need to be satisfied only by named individuals. 
-Since there is no explicitly defined title for the book {\em Hamlet}, the CWA yields to a violation. 
-
-RDF Validation requires that different names represent different objects (\emph{unique name assumption (UNA)}), whereas,
-OWL 2 is based on the {\em non-unique name assumption (nUNA)}.  
-If we define the property \emph{title} to be functional {\small\ms{(funct (title)),}} a book can have at most one distinct title.
-UNA causes a clash
-if the book {\em Huckleberry-Finn} has more than one title.
-For nUNA, however, reasoning concludes that the title {\em The-Adventures-of-Huckleberry-Finn} must be the same as the title {\em Die-Abenteuer-des-Huckleberry-Finn} 
-which resolves the violation. 
-%Although, OWL 2 does not assume UNA, OWL 2 has the constructs \emph{owl:sameAs} and \emph{owl:differentFrom} to state that two names are the same or different.
-
-If RDF validation would assume OWA and nUNA just like OWL 2 does, validation won’t be that restrictive and therefore we won’t get the intended validation results.
-
-Differences in semantics may lead to differences in validation results when applied to particular constraint types.
-This is important 
-as for 56.8\% of the constraint types validation results differ if the CWA or the OWA is assumed 
-and as for 66.6\% of the constraint types validation results are different in case the UNA or the nUNA is assumed \cite{BoschNolleAcarEckert2015}.
-
-Constraints are identical w.r.t. RDF semantics, 
+For the purpose of a consistent implementation and transformation of constraints, constraints are semantically equivalent  
 if they detect the same set of violations regardless of RDF data, 
 which means whenever the constraints are applied to any RDF data they point out the same violations.
-As we use multiple languages to express constraints of constraint types, 
-%in the first appendix of this paper,
-we thereby document identical semantics of these languages with regard to given constraint types \cite{BoschNolleAcarEckert2015}.
-This is also important in order to prove that semantically equivalent \emph{specific constraints} and corresponding \emph{generic constraints}
-behave in the same way w.r.t. validation results which semantically underpins bidirectional mappings.
 
 
 \subsection{\emph{Simple Constraints}}
