--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -854,7 +854,7 @@ property & $\top$ & authorOf & - & - & irreflexive property & - \\
 
 %\section{Validation of Specific and Generic Constraints}
 
-\subsection{Constraint Transformation}
+\subsection{Bidirectional Constraint Transformations}
 
 Constraint of the type \emph{minimum qualified cardinality restriction (R-75)} expressed in OWL 2:
 
