--- a/paper/RDF validation requirements/RDF validation requirements.tex
+++ b/paper/RDF validation requirements/RDF validation requirements.tex
@@ -4351,12 +4351,12 @@ Negative Literal Pattern Matching & - & REGEX, xsd:pattern and $\neg$ \\
 *Negation & $\neg$ & negation \\
 *Existential Quantification & $\exists$ & existential quantification \\
 *Universal Quantification & $\forall$ & universal quantification \\
-*Minimum Unqualified Cardinality & $\geq$ & $\geq$ \\
-*Minimum Qualified Cardinality & $\geq$ & $\geq$ \\
-*Maximum Unqualified Cardinality & $\leq$ & $\leq$ \\
-*Maximum Qualified Cardinality & $\leq$ & $\leq$ \\
-*Exact Unqualified Cardinality & $\geq$, $\leq$, $\sqcap$ & = \\
-*Exact Qualified Cardinality & $\geq$, $\leq$, $\sqcap$ & = \\
+*Minimum Unqualified Cardinality & $\geq$ &  minimum unqualified cardinality restriction \\
+*Minimum Qualified Cardinality & $\geq$ &  minimum qualified cardinality restriction \\
+*Maximum Unqualified Cardinality & $\leq$ &  maximum unqualified cardinality restriction \\
+*Maximum Qualified Cardinality & $\leq$ &  maximum qualified cardinality restriction \\
+*Exact Unqualified Cardinality & ( $\geq$, $\leq$, $\sqcap$ ) or = &  exact unqualified cardinality restriction \\
+*Exact Qualified Cardinality & ( $\geq$, $\leq$, $\sqcap$ ) or = &  exact qualified cardinality restriction \\
 *Transitive Object Properties & $\sqsubseteq$ & transitive property \\
 Context-Sp. Exclusive OR of P. & $\neg$, $\sqcap$, $\sqcup$ & exclusive or \\
 Context-Sp. Exclusive OR of P. Groups & $\neg$, $\sqcap$, $\sqcup$ & exclusive or \\
